feat: update loadUserInfo to be async and enhance user data loading across multiple pages

--- a/DESKTOPV2/funcionario/clientes-funcionario.html
+++ b/DESKTOPV2/funcionario/clientes-funcionario.html
@@ -901,7 +901,7 @@
       document.getElementById('menu').innerHTML = createFuncionarioMenu();
       document.getElementById('mobileNav').innerHTML = createMobileNav(PAGE_ACTIVE);
 
-      loadUserInfo();
+      await loadUserInfo();
       await loadClientes();
     });
 
