--- a/DESKTOPV2/funcionario/funcionarios-funcionario.html
+++ b/DESKTOPV2/funcionario/funcionarios-funcionario.html
@@ -689,7 +689,7 @@
       document.getElementById('menu').innerHTML = createFuncionarioMenu();
       document.getElementById('mobileNav').innerHTML = createMobileNav(PAGE_ACTIVE);
 
-      loadUserInfo();
+      await loadUserInfo();
       await loadFuncionarios();
     });
 
