--- a/DESKTOPV2/funcionario/nova-ordem-funcionario.html
+++ b/DESKTOPV2/funcionario/nova-ordem-funcionario.html
@@ -1414,7 +1414,7 @@
                     }
 
                     // Load user info
-                    loadUserInfo();
+                    await loadUserInfo();
                     this.empresaNome = localStorage.getItem('empresaNome') || 'Empresa';
 
                     // Check URL params for pre-selected type/category
