--- a/DESKTOPV2/funcionario/servicos-funcionario.html
+++ b/DESKTOPV2/funcionario/servicos-funcionario.html
@@ -850,7 +850,7 @@
       document.getElementById('menu').innerHTML = createFuncionarioMenu();
       document.getElementById('mobileNav').innerHTML = createMobileNav(PAGE_ACTIVE);
 
-      loadUserInfo();
+      await loadUserInfo();
       await loadTiposVeiculo();
       await loadServicosAndAdicionais();
     });
