--- a/DESKTOPV2/funcionario/financeiro-funcionario.html
+++ b/DESKTOPV2/funcionario/financeiro-funcionario.html
@@ -824,7 +824,7 @@
       document.getElementById('menu').innerHTML = createFuncionarioMenu();
       document.getElementById('mobileNav').innerHTML = createMobileNav(PAGE_ACTIVE);
 
-      loadUserInfo();
+      await loadUserInfo();
 
       await loadBalanceCards();
       await loadMovimentacoes();
